# majsterai-monorepo

./: .env.example  .gitignore  APPLICATION_OVERVIEW.md  DEPLOYMENT.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: .env  .env.example  Dockerfile  README.md  RUN.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a7b8c9d0e1f2_phase6_lead_extensions.py  b7b7548ea359_phase1_core_schema_extensions.py  b8c9d0e1f2a3_phase7_communication.py  c8d9e0f1a2b3_phase2_agent_schema_extensions.py  c9d0e1f2a3b4_phase8_notifications.py  d0e1f2a3b4c5_phase9_auth_integrations.py  d4e5f6a7b8c9_phase3_scheduling.py  e1f2a3b4c5d6_user_columns_if_missing.py  e5f6a7b8c9d0_phase4_trade_services.py  f0e1d2c3b4a5_organization_stripe_columns_if_missing.py  f6a7b8c9d0e1_phase5_invoicing.py  g1f2e3d4c5b6a_organization_remaining_columns_if_missing.py  h2i3j4k5l6m7_phase10_calendar_extensions.py  p11_virtual_assistant_phone.py
apps/api/src/: __init__.py  config.py  main.py
apps/api/src/application/: __init__.py
apps/api/src/application/agent/: __init__.py  get_agent.py  update_agent.py
apps/api/src/application/auth/: __init__.py  register_with_org.py
apps/api/src/application/call_history/: __init__.py  get_call_analytics.py  (+3 more)
apps/api/src/db/: __init__.py  database.py  models.py
apps/api/src/domain/: __init__.py
apps/api/src/infrastructure/: __init__.py
apps/api/src/interfaces/: __init__.py
apps/api/src/routers/: __init__.py  agents.py  livekit.py  organizations.py
apps/api/src/services/: __init__.py  livekit_service.py
apps/api/src/shared/: enums.py  exceptions.py  middleware.py  org_access.py
apps/api/tests/: test_health.py
(+272 files in other folders)
