[project]
name = "majsterai"
version = "0.1.0"
description = "MajsterAI - Voice AI Agent Platform"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/api"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
